--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,24 @@
     uploadBox.addEventListener("dragleave", () => {
       uploadBox.classList.remove("dragging");
     });
+    reader.onload = () => {
+  const lines = reader.result.split("\n");
+
+  lines.forEach(line => {
+    if (!line.trim()) return;
+    const data = JSON.parse(line);
+
+    if (data.progress) {
+      progressBar.style.width = data.progress + "%";
+    }
+
+    if (data.done) {
+      showTranslatedResult(data.result);
+      progressBar.style.width = "100%";
+      enableUI();
+    }
+  });
+};
   </script>
 
 </body>
